Add first scripts for 16s sequencing

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ Icon
 data/Icon
 
 plots/Icon
+
+scripts/Icon
+
+scripts/Icon
+
+plots/sequencing_16s/Icon
+
+data/sequencing_16s/Icon
+
+scripts/sequencing_16s/Icon
