add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,11 @@
 .Rproj.user/
 Icon
 .Rhistory
-
 data/Icon
-
 plots/Icon
-
 scripts/Icon
-
 scripts/Icon
-
 plots/sequencing_16s/Icon
-
 data/sequencing_16s/Icon
-
 scripts/sequencing_16s/Icon
+Icon
