--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Icon?
 .DS_Store
 data/sequencing_rpoB/phyloseq/myxococcus/dist_matrix.rds
 data/sequencing_rpoB/processed/transition_rates/previous/*
+.httr-oauth
