--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ data/sequencing_rpoB/phyloseq/myxococcus/dist_matrix.rds
 data/sequencing_rpoB/processed/transition_rates/previous/*
 .httr-oauth
 scripts/to_ignore/*
+data/sriswasdi_data/*
