--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ data/sequencing_rpoB/processed/transition_rates/previous/*
 .httr-oauth
 scripts/to_ignore/*
 data/sriswasdi_data/*
+scripts/sriswasdi_data/*
